# Reversi

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Curse.rar  README.md  build.ninja  cmake_install.cmake
include/cglm/include/: aabb2d.h  affine2d-post.h  applesimd.h  call.h  cglm.h  common.h  mat2.h  mat2x3.h  mat2x4.h  mat3.h  mat3x2.h  mat3x4.h  mat4.h  mat4x2.h  mat4x3.h  module.modulemap  noise.h  struct.h  types-struct.h  types.h  vec2-ext.h  vec2.h  vec3-ext.h  vec3.h  vec4-ext.h  vec4.h  version.h
include/cglm/include/call/: aabb2d.h  box.h  mat2.h  mat2x3.h  mat2x4.h  mat3.h  mat3x2.h  mat3x4.h  mat4.h  mat4x2.h  mat4x3.h  noise.h  project.h  vec2.h  vec3.h  vec4.h
include/cglm/include/handed/: euler_to_quat_lh.h
include/cglm/include/simd/: arm.h  intrin.h  wasm.h  x86.h
include/cglm/include/struct/: aabb2d.h  mat2.h  mat2x3.h  mat2x4.h  mat3.h  mat3x2.h  mat3x4.h  mat4.h  mat4x2.h  mat4x3.h  noise.h  vec2-ext.h  vec2.h  vec3-ext.h  vec3.h  vec4-ext.h  vec4.h
include/cglm/src/: aabb2d.c  affine.c  affine2d.c  bezier.c  box.c  cam.c  config.h  curve.c  ease.c  euler.c  frustum.c  io.c  ivec2.c  ivec3.c  ivec4.c  mat2.c  mat2x3.c  mat2x4.c  mat3.c  mat3x2.c  mat3x4.c  mat4.c  mat4x2.c  mat4x3.c  noise.c  plane.c  project.c  quat.c  ray.c  sphere.c  vec2.c  vec3.c  vec4.c
include/cglm/src/clipspace/: ortho_lh_no.c  ortho_lh_zo.c  (+12 more)
include/glad/: glad.h
include/nucklear/: nuklear_glfw_gl3.h
include/shaders/: ChipVertexShaderSource.glsl  NormalFragmentShaderSource.glsl  NormalVertexShaderSource.glsl  triangleFragmentShaderSource.glsl  triangleVertexShaderSource.glsl
include/user_headers/: stack.h  text_render.h
src/: glad.c  main.c  main_main.c  stack.c  text_render.c
src/tmp/: test.c  tmp.c
(+3 files in other folders)
